--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
 }
 
 @media (min-width: 1200px) {
+
   .container,
   .container-lg,
   .container-md,
@@ -29,12 +30,17 @@ h6 {
   line-height: 86px;
   color: #ffffff;
 }
+
 img {
   width: 100%;
 }
-.isp_topber_menu{
-  padding: 15px 0;
+
+.isp_topber_menu {
+  padding: 15px 0 0 10px;
+  border-bottom: 1px solid rgba(44, 45, 61, 0.1);
+  ;
 }
+
 .isp_topbar_left {
   font-family: "inter", sans-serif;
   font-weight: 400;
@@ -54,26 +60,48 @@ img {
   color: #282f53;
   text-decoration: none;
 }
-.isp_topber_right{
+
+.isp_topbar_right {
   display: flex;
   justify-content: end;
 }
 
-
-.isp_topbar_content h6{
-  font-family: 'Inter',sans-serif;
-font-weight: 400;
-font-size: 12px;
-line-height: 15px;
-color: #282f53;
-}
-
-.isp_topbar_social_link {
-  display: inherit;
-  list-style-type: none;
+.isp_topbar_right_content h6 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
   color: #282f53;
 }
 
+.isp_topbar_social_link::before {
+  content: "";
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 1px;
+  height: 14px;
+  background-color: rgba(40, 47, 83, 0.3);
+}
+
+.isp_topbar_social_link {
+  padding-left: 0px;
+  font-size: 12px;
+  line-height: 12px;
+  display: flex;
+  list-style-type: none;
+}
+
+.isp_topbar_social_link li {
+  margin-right: 10px;
+}
+
+.isp_topbar_social_link li a {
+  color: #676874;
+}
+
+.isp_topbar_social_link li a:hover {
+  color: #ee2b47;
+}
 
 .contact-button {
   font-family: "Nunito", sans-serif;
@@ -96,11 +124,10 @@ color: #282f53;
   transition: 0.4s all ease-in-out;
 }
 
-.border {
-  border: 1px solid white;
-  opacity: 0.2;
-}
 
+.navbar{
+  background: #FFFFFF;
+}
 .nav_menu {
   font-family: "Inter", sans-serif;
   font-weight: 500;
@@ -127,29 +154,24 @@ color: #282f53;
   transition: 0.4s all ease-in-out;
 }
 
-.isp__banner__image{
+.isp__banner__image {
   background-image: url(/assets/image/header-image.svg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
   display: flex;
   align-items: center;
-  
-}
- /* img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-} */
 
-.banner__content{
-  height: 100%;
-  
 }
 
-.banner__sub_title h5{
-  font-family: 'Nunito',sans-serif;
+
+.banner__content {
+  height: 100%;
+
+}
+
+.banner__sub_title h5 {
+  font-family: 'Nunito', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 25px;
@@ -159,13 +181,15 @@ color: #282f53;
 .banner__sub_title span {
   color: #ee2b47;
 }
-.banner_title h1{
-  font-family: 'Nunito',sans-serif;
-font-weight: 900;
-font-size: 80px;
-line-height: 86px;
-color: #ffffff;
+
+.banner_title h1 {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 900;
+  font-size: 80px;
+  line-height: 86px;
+  color: #ffffff;
 }
+
 .banner__des {
   color: rgba(255, 255, 255, 0.8);
   opacity: 0.8;
@@ -186,11 +210,13 @@ color: #ffffff;
   background-color: #ee2b47;
   color: #ffffff;
 }
+
 .banner-button1:hover {
   background-color: #ffffff;
   color: #ee2b47;
   transition: 0.4s all ease-in-out;
 }
+
 .banner-button2 {
   font-family: "Nunito", sans-serif;
   font-weight: 600;
@@ -212,18 +238,6 @@ color: #ffffff;
   transition: 0.4s all ease-in-out;
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  display: flex;
-  align-items: center;
-}
-.swiper {
-  width: 100%;
-  height: 100%;
-}
 
 /* =================
 #feature section start
@@ -320,7 +334,7 @@ color: #ffffff;
   background: #FFFFFF;
 }
 
-.about_enima_center{
+.about_enima_center {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -344,7 +358,7 @@ color: #ffffff;
   }
 
   100% {
-    box-shadow: 0 0 0 20px #ffffff ;
+    box-shadow: 0 0 0 20px #ffffff;
   }
 }
 
@@ -413,6 +427,7 @@ color: #ffffff;
 }
 
 .isp_about_button:hover {
+  transition: 0.4s all ease-in-out;
   background-color: #ee2b47;
   color: #ffffff;
 }
@@ -449,8 +464,13 @@ color: #ffffff;
   padding-bottom: 120px;
 }
 
-.service__icon {
+.service__shape {
   width: 189px;
+}
+.service__shape_text{
+  margin-left: 610px;
+  margin-top: -42px;
+  color: #FFFFFF;
 }
 
 .service_text a {
@@ -472,6 +492,7 @@ color: #ffffff;
   font-size: 44px;
   line-height: 56px;
   color: #ffffff;
+  margin-top: 20px;
 }
 
 .image_ip {
@@ -489,17 +510,20 @@ color: #ffffff;
   padding: 25px 5px;
 }
 
-.service_box:hover{
+.service_box:hover {
   background-color: #FFFFFF;
   border: 2px solid #ee2b47;
 }
+
 .service_box:hover .service_content h2 {
   color: #282f53;
 }
+
 .service_box:hover .service_content p {
   color: #282f53;
 }
-.service_box:hover .service-button{
+
+.service_box:hover .service-button {
   color: #ee2b47;
 }
 
@@ -660,13 +684,12 @@ color: #ffffff;
   transition: 0.4s all ease-in-out;
 }
 
-.price__view a{
+.price__view a {
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   font-size: 15px;
   line-height: 20px;
-  color: #282f53;
-  display: inline-block;
+  display: block;
   text-align: center;
   color: #282f53;
   text-decoration: none;
@@ -674,7 +697,7 @@ color: #ffffff;
 }
 
 
-.price__view:hover {
+.price__view a:hover {
   color: #ee2b47;
 }
 
@@ -749,9 +772,17 @@ color: #ffffff;
 .choose__boxone:hover {
   border: 2px solid #ee2b47;
 }
+
 @keyframes growProgressBarOne {
-  0%, 33% { --pgPercentage: 0; }
-  100% { --pgPercentage: var(""); }
+
+  0%,
+  33% {
+    --pgPercentage: 0;
+  }
+
+  100% {
+    --pgPercentage: var("");
+  }
 }
 
 @property --pgPercentage {
@@ -771,10 +802,9 @@ div[role="progressbarOne"] {
   border-radius: 50%;
   display: grid;
   place-items: center;
-  background: 
+  background:
     radial-gradient(closest-side, white 80%, transparent 0 99.99%, white 0),
-    conic-gradient(var(--fg) calc(var(--pgPercentage) * 1%), var(--bg) 0)
-    ;
+    conic-gradient(var(--fg) calc(var(--pgPercentage) * 1%), var(--bg) 0);
   font-family: Helvetica, Arial, sans-serif;
   font-size: calc(var(--size) / 5);
   color: var(--fg);
@@ -787,8 +817,15 @@ div[role="progressbaOne"]::before {
 
 
 @keyframes growProgressBar {
-  0%, 33% { --pgPercentage: 0; }
-  100% { --pgPercentage: var(""); }
+
+  0%,
+  33% {
+    --pgPercentage: 0;
+  }
+
+  100% {
+    --pgPercentage: var("");
+  }
 }
 
 @property --pgPercentage {
@@ -808,10 +845,9 @@ div[role="progressbar"] {
   border-radius: 50%;
   display: grid;
   place-items: center;
-  background: 
+  background:
     radial-gradient(closest-side, white 80%, transparent 0 99.99%, white 0),
-    conic-gradient(var(--fg) calc(var(--pgPercentage) * 1%), var(--bg) 0)
-    ;
+    conic-gradient(var(--fg) calc(var(--pgPercentage) * 1%), var(--bg) 0);
   font-family: Helvetica, Arial, sans-serif;
   font-size: calc(var(--size) / 5);
   color: var(--fg);
@@ -821,7 +857,8 @@ div[role="progressbar"]::before {
   counter-reset: percentage var("");
   content: counter(percentage) '120 Mbps';
 }
-.choose__boxone_content{
+
+.choose__boxone_content {
   margin-left: 40px;
 }
 
@@ -877,7 +914,7 @@ div[role="progressbar"]::before {
   color: rgba(255, 255, 255, 0.8);
 }
 
-.isp_call_button a {
+.isp_call_button a{
   padding: 10.4px 27px;
   border-radius: 4px;
   background-color: #ffffff;
@@ -893,6 +930,7 @@ div[role="progressbar"]::before {
 }
 
 .isp_call_button a:hover {
+  transition: .4s all ease-in-out;
   border: 2px solid #ffffff;
   background-color: #ee2b47;
   color: #ffffff;
@@ -904,6 +942,7 @@ div[role="progressbar"]::before {
 .faq {
   padding-top: 120px;
 }
+
 .accordion-button::after {
   content: "\f067";
   font-family: "Font Awesome 5 Free";
@@ -920,7 +959,7 @@ div[role="progressbar"]::before {
   background-image: none;
   border-radius: 50px;
   color: #fff;
-  background: #7336f1;
+  background: #676874;
   display: -ms-grid;
   display: grid;
   place-items: center;
@@ -934,7 +973,7 @@ div[role="progressbar"]::before {
   -ms-transform: rotate(0deg);
   transform: rotate(0deg);
   background: #fff;
-  color: #393542;
+  color: #676874;
   line-height: 27px;
   width: 27px;
   height: 27px;
@@ -944,13 +983,16 @@ div[role="progressbar"]::before {
   background: #fff;
   border-radius: 50px;
 }
+
 .accordion-flush .accordion-item:last-child {
   border: 2px solid rgba(44, 45, 61, 0.1);
 }
-.accordion-flush .accordion-item:first-child{
+
+.accordion-flush .accordion-item:first-child {
   border: 2px solid rgba(44, 45, 61, 0.1);
 }
-.accordion-button:not(.collapsed){
+
+.accordion-button:not(.collapsed) {
   background-color: #ffffff;
   color: #282f53;
 }
@@ -967,24 +1009,28 @@ div[role="progressbar"]::before {
   font-weight: 600;
   font-size: 22px;
   line-height: 27px;
-  font-family:'inter',sans-serif;
+  font-family: 'inter', sans-serif;
 }
 
 .accordion-flush .accordion-item {
   background: #FFFFFF;
-border: 2px solid rgba(44, 45, 61, 0.1);
-border-radius: 5px;
+  border: 2px solid rgba(44, 45, 61, 0.1);
+  border-radius: 5px;
 }
-.accordion-flush .accordion-item:hover{
-    border-color: #ee2b47;
+
+.accordion-flush .accordion-item:hover {
+  border-color: #ee2b47;
 }
-.accordion-item:hover{
+
+.accordion-item:hover {
   background-color: #FFFFFF;
 }
+
 .faq_shape {
   width: 179px;
 }
-.faq_shape_text p{
+
+.faq_shape_text p {
   margin-top: -38px;
   margin-left: 40px;
   font-family: "Inter", sans-serif;
@@ -1058,7 +1104,7 @@ border-radius: 5px;
 
 .blog_card {
   border: 2px solid rgba(44, 45, 61, 0.1);
-  border-radius: 10px;
+  border-radius: 12px 12px 10px 10px;
 }
 
 .blog_card:hover {
@@ -1073,6 +1119,7 @@ border-radius: 5px;
   width: 179px;
   margin-left: 520px;
 }
+
 .blog_shape_text {
   margin-top: -38px;
   margin-left: 40px;
@@ -1093,9 +1140,11 @@ border-radius: 5px;
   color: #282f53;
   padding: 10px 0;
 }
+
 .blog__sub-des {
   padding-bottom: 10px;
 }
+
 .blog__main {
   padding: 30px 20px;
 }
@@ -1115,7 +1164,8 @@ border-radius: 5px;
   text-decoration: none;
   color: #282f53;
 }
-.blog_date p{
+
+.blog_date p {
   margin-left: 10px;
 }
 
@@ -1169,6 +1219,14 @@ border-radius: 5px;
   opacity: 0.8;
   color: #ffffff;
 }
+.form-control:focus{
+  box-shadow: none;
+  background-color: #282f53;
+  color: #FFFFFF;
+}
+.form-control:focus-visible{
+  border: 2px solid rgba(255, 255, 255, 0.1);
+}
 
 .login_form {
   border: 2px solid rgba(255, 255, 255, 0.1);
@@ -1195,6 +1253,7 @@ border-radius: 5px;
 }
 
 .contact_form_button {
+  margin-left: 15px;
   font-family: "Inter", sans-serif;
   font-weight: 600;
   font-size: 16px;
@@ -1212,6 +1271,7 @@ border-radius: 5px;
 }
 
 .contact_form_button:hover {
+  transition: .4s all ease-in-out;
   background-color: #ffffff;
   color: #ee2b47;
 }
@@ -1226,6 +1286,7 @@ border-radius: 5px;
 .footer_widget_logo {
   width: 118px;
 }
+
 .footer_widger_wrapper {
   padding: 50px 0px;
 }
@@ -1245,6 +1306,7 @@ border-radius: 5px;
   background-color: #ee2b47;
   color: #ffffff;
 }
+
 .footer_widget_social_link li:hover a {
   color: #ffffff;
 }
@@ -1261,6 +1323,7 @@ border-radius: 5px;
   color: #282f53;
   margin-left: 28px;
 }
+
 .last_child {
   margin-left: 0px;
 }
@@ -1283,6 +1346,7 @@ border-radius: 5px;
   padding-left: 10px;
   transition: 0.4s all ease-in-out;
 }
+
 .footer_email {
   font-family: "Nunito", sans-serif;
   font-weight: 400;
@@ -1294,6 +1358,7 @@ border-radius: 5px;
   color: #282f53;
   padding: 6px 28px;
 }
+
 .footer_email:focus-visible {
   outline: none;
 }
@@ -1317,6 +1382,7 @@ border-radius: 5px;
   background-color: #ffffff;
   border: 2px solid rgba(238, 43, 71, 0.1);
   color: #ee2b47;
+  transition: 0.4s all ease-in-out;
 }
 
 .copyright-text {
@@ -1326,9 +1392,10 @@ border-radius: 5px;
   line-height: 32px;
   color: #676874;
   text-align: center;
-  padding: 15px  0px 20px 0px;
+  padding: 15px 0px 20px 0px;
   border-top: 1px solid rgba(40, 47, 83, 0.1);
 }
+
 .copyright-text a {
   text-decoration: none;
 }
